platform/paperless/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: cloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: paperless.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-paperless-ngx
                port:
                  number: 8000
